# sc-file

./: .gitignore  .ruff.toml  1.ol  CONTRIBUTING.md  FAQ.md  FAQ_RU.md  LICENSE  README-RU.md  README.md  README.rst  README_RU.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml  tests.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: _links.rst  compile.rst  conf.py  faq.rst  formats.rst  index.rst  support.rst  usage.rst
scfile/: __init__.py  __main__.py  base.py  consts.py  dds.py  enums.py  exceptions.py  func.py  mcsa.py  mic.py  model.py  obj.py  ol.py  reader.py  types.py
scfile/cli/: __init__.py  commands.py  consts.py  convert.py  default.py  enums.py  excepthook.py  main.py  params.py  scfile.py  types.py  utils.py  version.py
scfile/convert/: __init__.py  auto.py  base.py  convert.py  detect.py  factory.py  formats.py  legacy.py
scfile/core/: __init__.py  base.py  content.py  context.py  decoder.py  encoder.py  handler.py  options.py  structio.py  types.py
scfile/exceptions/: __init__.py  base.py  basic.py  convert.py  core.py  decode.py  file.py  io.py  mcsa.py  ol.py
scfile/file/: __init__.py  base.py  data.py  decoder.py  encoder.py
scfile/files/: __init__.py
scfile/formats/: __init__.py
scfile/geometry/: anim.py  mesh.py  scene.py  skeleton.py  vectors.py  vertex.py
scfile/gui/: __init__.py  components.py  consts.py  strings.py  styles.py  utils.py  window.py  worker.py
scfile/io/: __init__.py  base.py  binary.py  consts.py  file.py  mcsa.py  ol.py  streams.py
scfile/output/: __init__.py  base.py  dds.py  obj.py  png.py
scfile/reader/: __init__.py  enums.py  reader.py
scfile/source/: __init__.py  base.py  mcsa.py  mic.py  ol.py
scfile/structures/: __init__.py  animation.py  flags.py  mesh.py  models.py  region.py  regions.py  scene.py  skeleton.py  texture.py  textures.py  types.py  vectors.py  vertex.py
scfile/utils/: __init__.py  cli.py  convert.py  dds_structure.py  files.py  func.py  mcsa_flags.py  model.py  reader.py  regions.py  updates.py  version.py  versions.py
scripts/: build.py
scripts/hooks/: hook-PySide6.py  hook-rich.py
templates/: DIRMAP.bt  EFKMODEL.bt  HASHMAP.bt  MAP.bt  MCAL.bt  MCSA.bt  MCSB.bt  MDAT.CHUNK.bt  MDAT.bt  OL-CUBEMAPS.bt  OL.CUBEMAP.bt  OL.bt  README.md  SIGN.bt  TEXARR.bt  TORRENT.BIN.bt  TORRENT.MAP.bt  TORRENT.bt
test/: blocks.json  mdat_blocks.py  mdat_to_mca.py
tests/: conftest.py  test_cli.py  test_exceptions.py
tests/api/: test_api.py  test_convert.py  test_sugar.py
tests/cli/: test_convert.py  test_entrypoint.py  test_group.py  test_mapcache.py
tests/codec/: extract.py
tests/codecs/: extract.py  validate.py
tests/convert/: test_base.py  test_factory.py
tests/core/: conftest.py  test_base.py  test_content.py  test_decoder.py  test_encoder.py  test_options.py  test_structio.py
tests/formats/: conftest.py  test_fbx.py  test_mcsa.py  test_mic.py  test_model.py  test_nbt.py  test_ol.py  test_region.py  test_texarr.py  test_texture.py
tests/mic/: test_mic.py
tests/ol/: test_ol.py
tests/structures/: test_animation.py  test_matrices.py  test_scene.py  test_skeleton.py  test_textures.py  test_transforms.py
tests/usage/: test_advanced.py  test_cli.py  test_convert.py  test_simple.py  test_torrent_convert.py
tests/utils/: test_cli.py  test_files.py  test_regions.py  (+2 more)
(+390 files in other folders)
