[project]
name = "sc-file"
version = "4.0.0"
description = "Utility & Library for decoding stalcraft assets"

requires-python = ">=3.11"

authors = [{ name = "onejeuu", email = "mail@66rk.ru" }]

readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "click==8.2.1",
    "lz4>=4.4.4",
    "numpy>=2.2.6",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
    "pytest>=8.3.5",
]

docs = [
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-book-theme>=1.1.4",
    "sphinx>=8.2.3",
]

[project.urls]
Homepage = "https://github.com/onejeuu/sc-file"
Repository = "https://github.com/onejeuu/sc-file"
Documentation = "https://sc-file.readthedocs.io"

[project.scripts]
scfile = "scfile.__main__:main"

[tool.setuptools]
packages = { find = { include = ["scfile", "scfile.*"] } }

[tool.ruff.lint]
ignore = ["E701"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
